# he-project

./: CMakeLists.txt  bfv_gemm_bench.csv  bfv_noise.csv
bench/: bench_all.cpp  bench_bfv_gemm.cpp
bench_results/: notes.md  results.csv
build-debug/: .ninja_deps  .ninja_log  CMakeCache.txt  bench_bfv_gemm  build.ninja  cmake_install.cmake  test_bfv_add  test_bfv_encdec  test_bfv_gemm  test_bfv_keygen  test_bfv_mul_raw  test_bfv_mul_relin  test_bfv_noise  test_bfv_ntt  test_bfv_ntt_big  test_bfv_poly  test_bfv_relin
build-debug/bench/: bench_all
build-debug/tests/: test_all
include/bfv/: bfv.h  ciphertext.h  ciphertext3.h  eval.h  keys.h  noise.h  ntt.h  params.h  poly.h  relin.h
include/bigint/: bigint.h  div_exact.h  gcd.h  inv.h  limb.h  mod_arith.h  montgomery.h  prime.h
include/paillier/: paillier.h
src/bfv/: encrypt_decrypt.cpp  eval_add.cpp  eval_gemm.cpp  eval_mul.cpp  keygen.cpp  noise.cpp  ntt.cpp  poly.cpp  relin.cpp
src/bigint/: bigint.cpp  div_exact.cpp  gcd.cpp  inv.cpp  mod_arith.cpp  montgomery.cpp  mul_schoolbook.cpp  prime.cpp
src/paillier/: paillier.cpp
tests/: test_all.cpp  test_bfv_add.cpp  test_bfv_encdec.cpp  test_bfv_gemm.cpp  test_bfv_keygen.cpp  test_bfv_mul_raw.cpp  test_bfv_mul_relin.cpp  test_bfv_noise.cpp  test_bfv_ntt.cpp  test_bfv_ntt_big.cpp  test_bfv_poly.cpp  test_bfv_relin.cpp
tools/: he_cli.cpp  run_bench.sh
